# autodoc-cli

./: .autodoc.sqlite  README.md  autodoc.spec  build_binary.sh  pyproject.toml
.github/workflows/: build-binaries.yml  build.yml  publish.yml  test.yml
autodoc/: scanner.py
autodoc/adapters/: __init__.py  c_adapter.py  fallback_adapter.py
autodoc/cli/: main.py
hooks/: hook-tree_sitter_languages.py
